<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InfoProductsActivity"
    android:id="@+id/activity_info_products">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_frame">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
<!--            <SearchView-->
<!--                android:id="@+id/cardSearch"-->
<!--                android:layout_marginLeft="16dp"-->
<!--                android:layout_marginRight="16dp"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                android:background="@drawable/circle"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:queryHint="@string/text_search"/>-->

<!--            <androidx.viewpager2.widget.ViewPager2-->
<!--                android:id="@+id/viewPagerImageSlider"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="300dp"-->
<!--                android:layout_below="@+id/cardSearch"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:clipToPadding="false"-->
<!--                android:overScrollMode="never"-->
<!--                android:paddingStart="80dp"-->
<!--                android:paddingEnd="80dp" />-->
            <ImageView
                android:id="@+id/imageDetail"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@+id/cardSearch"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingStart="80dp"
                android:paddingEnd="80dp">

            </ImageView>

            <TextView
                android:id="@+id/gia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageDetail"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:gravity="right"
                android:text="@string/gia"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tensanpham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gia"
                android:layout_marginLeft="16dp"
                android:text="@string/tensanpham"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/soluongsp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tensanpham"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/baseline_straighten_black_24dp"
                android:drawablePadding="10dp"
                android:text="@string/soluongsp"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/linearQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/soluongsp"
                android:layout_marginTop="16dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btntru"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ripplebtntru" />

                <TextView
                    android:id="@+id/txtsoluong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:text="1"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btncong"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ripplebtncong" />

            </LinearLayout>

            <TextView
                android:id="@+id/chitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearQty"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/baseline_info_black_24dp"
                android:drawablePadding="10dp"
                android:text="@string/chitietsanpham"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/chitiet"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">

                <TableRow>
                    <TextView
                        android:id="@+id/tvScreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_tvScreen" />

                    <TextView
                        android:layout_marginLeft="24dp"
                        android:id="@+id/tvScreenInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/tvBackCam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_tvBachCam" />

                    <TextView
                        android:layout_marginLeft="24dp"

                        android:id="@+id/tvBackCamInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/tvFrontCam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_tvFrontCam" />

                    <TextView
                        android:layout_marginLeft="24dp"

                        android:id="@+id/tvFrontCamInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/tvChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_tvChip" />

                    <TextView
                        android:layout_marginLeft="24dp"

                        android:id="@+id/tvChipInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/tvRam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_tvRam" />

                    <TextView
                        android:layout_marginLeft="24dp"

                        android:id="@+id/tvRamInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/tvRom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_tvRom" />

                    <TextView
                        android:layout_marginLeft="24dp"

                        android:id="@+id/tvRomInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/tvSim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_tvSim" />

                    <TextView
                        android:layout_marginLeft="24dp"

                        android:id="@+id/tvSimInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/tvPin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_tvPin" />

                    <TextView
                        android:layout_marginLeft="24dp"

                        android:id="@+id/tvPinInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/tvOS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_tvOS" />

                    <TextView
                        android:layout_marginLeft="24dp"

                        android:id="@+id/tvOSInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>
            </TableLayout>

            <com.facebook.share.widget.ShareButton
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tableLayout"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp">

            </com.facebook.share.widget.ShareButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvQuantity"
                android:text="Còn x sản phẩm"
                android:layout_below="@+id/shareButton"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp">
            </TextView>

            <TextView
                android:id="@+id/mota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvQuantity"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:drawableLeft="@drawable/baseline_info_black_24dp"
                android:drawablePadding="10dp"
                android:text="@string/motasanpham"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/thongtin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mota"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:layout_marginBottom="65dp"
                android:lineSpacingExtra="7dp"
                android:text="@string/thongtinsanpham"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="start">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btn_themGioHang"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/ripple"
                        android:drawableEnd="@drawable/ic_shopping_cart_black_24dp"
                        android:drawablePadding="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/dathang"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn_muangay"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/ripple2"
                        android:drawableEnd="@drawable/baseline_arrow_right_alt_white_24dp"
                        android:drawablePadding="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="5dp"
                        android:text="@string/txtmuangay"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>
